pic name update

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="media">
             <h2>Media</h2>
             <figure>
-                <img src="/susann-schuster-V04PXzRkxWg-unsplash_Tokyo.jpg" alt="Cherry Blossom at Peak Bloom in Tokyo"
+                <img src="/cherry-blossom1.jpg" alt="Cherry Blossom at Peak Bloom in Tokyo"
                     width="200px" />
                 <figcaption>Tokyo</figcaption>
             </figure>
