remove / from pic names

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
         <section id="media">
             <h2>Media</h2>
             <figure>
-                <img src="/cherry-blossom1.jpg" alt="Cherry Blossom at Peak Bloom in Tokyo"
+                <img src="cherry-blossom1.jpg" alt="Cherry Blossom at Peak Bloom in Tokyo"
                     width="200px" />
                 <figcaption>Tokyo</figcaption>
             </figure>
             <figure>
-                <img src="/library-of-congress-yNANhWCZG9c-unsplash_DC.jpg"
+                <img src="library-of-congress-yNANhWCZG9c-unsplash_DC.jpg"
                     alt="Cherry Blossom at Peak Bloom in Washington DC" width="200px" />
                 <figcaption>Washington DC</figcaption>
             </figure>
